--- a/build.gradle
+++ b/build.gradle
@@ -1,45 +1,39 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.2.5'
-	id 'io.spring.dependency-management' version '1.1.4'
+    id 'java'
+    id 'org.springframework.boot' version '3.1.0'
+    id 'io.spring.dependency-management' version '1.1.0'
+    id 'io.freefair.lombok' version '8.3'
 }
-
-group = 'sacola.api'
-version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '17'
-}
-
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springdoc:springdoc-openapi-ui:1.5.13'
-	implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.14'
-	implementation 'org.springdoc:springdoc-openapi-security:1.6.14'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
-	implementation 'io.springfox:springfox-swagger2:2.9.2'
-	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
-	implementation 'javax.servlet:javax.servlet-api:4.0.1'
-	implementation 'org.springframework.boot:spring-boot-starter-tomcat'
-	implementation 'javax.persistence:javax.persistence-api:2.2'
-}
-
-tasks.named('test') {
-	useJUnitPlatform()
+    // DEPENDÊNCIAS OBRIGATÓRIAS
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation' 
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.security:spring-security-crypto'
+    implementation 'com.auth0:java-jwt:4.5.0'
+    
+    // Lombok
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    
+    // Database (H2 para desenvolvimento)
+    runtimeOnly 'com.h2database:h2'
+    
+    // Para desenvolvimento
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    
+    // Para testes
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
